header and banner desktop view

--- a/index.html
+++ b/index.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Insight-basic</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <section class="header">
-        <div class="container">
-            <div class="header__wrapper">
-                <div class="branding">
-                 <img src="./img1/logo.png" alt="">
-                </div>
-                <div class="header__nav">
-                    <ul>
-                        <li class="active"><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Project</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
+      <div class="container">
+        <div class="header__wrapper">
+          <div class="branding">
+            <img src="./img1/logo.png" alt="" />
+          </div>
+          <div class="header__nav">
+            <ul>
+              <li class="active"><a href="">Home</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Project</a></li>
+              <li><a href="">Contact</a></li>
+            </ul>
+          </div>
         </div>
+      </div>
     </section>
 
     <section class="banner">
-        <div class="container">
-            <div class="banner__wrapper">
-                <div class="banner__content">
-                    <h1>Turn Your House Into A Home</h1>
-                    <div class="banner__btn">
-                        <a class="btn bg--transparent" href="">See samples</a>
-                        <a class="btn bg-- primary" href="">Inquire</a>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="banner__wrapper">
+          <div class="banner__content">
+            <h1>Turn Your House Into A Home</h1>
+            <div class="banner__btn">
+              <a class="btn bg--transparent" href="">See samples</a>
+              <a class="btn bg--primary" href="">Inquire</a>
             </div>
+          </div>
         </div>
+      </div>
     </section>
-</body>
+  </body>
 </html>
